tests/kiama/negative/type_errors/L4/11_badarray7.ob
MODULE badarray7;

TYPE
    atype4 = ARRAY 10 OF INTEGER;
    
VAR
    array1 : atype4;
    abool : BOOLEAN;
    
BEGIN
    array1[1] := abool
END badarray7.
